--- a/about.html
+++ b/about.html
@@ -314,7 +314,7 @@
 									<div class="footer-text">Join us to our newsletter And releases submit.</div>
 									<!-- Subscribe Form -->
 									<div class="subscribe-form">
-										<form method="post" action="https://themesflat.co/html/kashit/contact.html">
+										<form method="post" action="https://formspree.io/f/mvoevdyd">
 											<div class="form-group">
 												<input type="email" name="email" value="" placeholder="Enter your email" required>
 												<button type="submit" class="theme-btn fa-solid fa-arrow-right fa-fw"></button>
