--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,6 @@
 
 <!-- <script src="index.js"></script> -->
 </head>
-
 <body>
  
 <div class="page-wrapper">
@@ -52,7 +51,7 @@
 		<!-- Header Top -->
         
         <!-- Header Lower -->
-        <div class="header-lower">
+		<div class="header-lower">
             
 			<div class="auto-container">
 				<div class="inner-container d-flex justify-content-between align-items-center">
@@ -316,7 +315,7 @@
 									<div class="footer-text">Join us to our newsletter And releases submit.</div>
 									<!-- Subscribe Form -->
 									<div class="subscribe-form">
-										<form method="post" action="">
+										<form method="" action="https://formspree.io/f/mvoevdyd">
 											<div class="form-group">
 												<input type="email" name="email" value="" placeholder="Enter your email" required>
 												<button type="submit" class="theme-btn fa-solid fa-arrow-right fa-fw"></button>
