--- a/gallery.html
+++ b/gallery.html
@@ -395,9 +395,9 @@
 					<img src="images/logo-3a.svg" alt="" />
 				</div>
 				<!-- Info Text -->
-				<div class="cta-one_text">
+				<!-- <div class="cta-one_text">
 					50 Ikorodu Road, Jibowu, Lagos. <br> Nigeria.
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</section>
