--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
 
 				<!-- Image Column -->
 				<div class="steps-two_image-column col-lg-6 col-md-12 col-sm-12">
-					<div class="steps-two_image-inner">
+					<div class="">
 						<div class="steps-two_pattern-layer" data-parallax='{"y" : 50}' style="background-image: url(images/background/pattern-4.png)"></div>
 						<div class="steps-two_icon flaticon-light-bulb"></div>
 						<div class="row clearfix">
