--- a/price.html
+++ b/price.html
@@ -284,8 +284,8 @@
 				<!-- Image Column -->
 				<div class="faq-one_image-column col-lg-6 col-md-12 col-sm-12">
 					<div class="faq-one_image-inner parallax-scene-5">
-						<div class="faq-one_image-two" data-depth="0.20">
-							<img src="images/resource/Power-plant-using-renewable-solar-energy.jpg" alt="" />
+						<div class="" data-depth="0.20">
+							<img src="images/resource/Power-plant-using-renewable-solar-energy.jpg" alt=""style="border-radius: 30px;" />
 						</div>
 					</div>
 				</div>
