--- a/services.html
+++ b/services.html
@@ -200,7 +200,7 @@
 						<div class="" data-depth="0.20"><img src="" alt="" /></div>
 						<div class="parallax-scene-4">
 							<div class="about-one_image" data-depth="0.20">
-								<img src="images/resource/Structured-Cabling.jpg" alt="" />
+								<img src="images/resource/Structured-Cabling.jpg" alt="" style="border-radius: 30px;"/>
 							</div>
 						</div>
 					</div>
@@ -330,12 +330,12 @@
 
 				<!-- Image Column -->
 				<div class="steps-two_image-column col-lg-6 col-md-12 col-sm-12">
-					<div class="steps-two_image-inner">
+					<div class="">
 						<div class="steps-two_pattern-layer" data-parallax='{"y" : 50}' style="background-image: url(images/background/pattern-4.png)"></div>
 						<div class="steps-two_icon flaticon-light-bulb"></div>
 						<div class="row clearfix">
 							<div class="about-one_image" data-depth="0.20">
-								<img src="images/resource/Structured-Cabling.jpg" alt="" />
+								<img src="images/resource/Structured-Cabling.jpg" alt="" style="border-radius: 30px;" />
 							</div>
 						</div>
 					</div>
