--- a/testimonial.html
+++ b/testimonial.html
@@ -302,8 +302,8 @@ Integrated Energy Management</div>
 				<!-- Image Column -->
 				<div class="faq-one_image-column col-lg-6 col-md-12 col-sm-12">
 					<div class="faq-one_image-inner parallax-scene-5">
-						<div class="faq-one_image-two" data-depth="0.20">
-							<img src="images/resource/SERVICE4.PNG" alt="" />
+						<div class="" data-depth="0.20">
+							<img src="images/resource/SERVICE4.PNG" alt="" style="border-radius: 30px;" />
 						</div>
 					</div>
 				</div>
