--- a/index.html
+++ b/index.html
@@ -825,33 +825,33 @@
 		</div>
 	</section>
 	<!-- End Testimonial One -->
+	<!-- Contact Info One -->
+	<section class="contact-info_one text-center">
+		<div class="auto-container">
+			<div class="row clearfix ">
 
-	<!-- Map One -->
-	<section class="map-one">
-		<div class="map-one_content d-flex justify-content-end">
-			<div class="map-one_content-box">
-				<ul class="map-one_info">
-					<li>
-						<span class="icon flaticon-map"></span>
-						<!-- <strong>50 Ikorodu Road, Jibowu, Lagos.</strong>
-						Contact Location -->
-					</li>
-					<li>
-						<span class="icon flaticon-email-1"></span>
-						<strong>info@jecslimited.com</strong>
-						Contact Email
-					</li>
-					<li>
-						<!-- <span class="icon flaticon-telephone"></span>
-						<strong>08188882350, 08177772350</strong>
-						Contact Phone -->
-					</li>
-				</ul>
+				<!-- Content Column -->
+				<!-- <div class="contact-info-column col-lg-6 col-md-6 col-sm-12">
+					<div class="info-inner">
+						<span class="icon flaticon-telephone"></span>
+						<a class="phone" href="tel:+55-9900-666-22">08188882350, 08177772350</a>
+						<div class="text">Contact Phone</div>
+					</div>
+				</div> -->
+
+				<!-- Content Column -->
+				<div class="contact-info-column col-lg-12 col-md-12 col-sm-12">
+					<div class="info-inner">
+						<span class="icon flaticon-email"></span>
+						<a class="email" href="mailto:info.mirpur@gmail.com">info@jecslimited.com</a>
+						<div class="text">Contact Email</div>
+					</div>
+				</div>
+
 			</div>
+
 		</div>
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d805184.6331292129!2d144.49266890254142!3d-37.97123689954809!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad646b5d2ba4df7%3A0x4045675218ccd90!2sMelbourne%20VIC%2C%20Australia!5e0!3m2!1sen!2s!4v1574408946759!5m2!1sen!2s" allowfullscreen=""></iframe>
 	</section>
-	<!-- End Map One -->
 
 	<!-- CTA One -->
 	<section class="cta-one style-two">
