Remove search and added email

--- a/contact.html
+++ b/contact.html
@@ -224,7 +224,7 @@
 
 				<!-- Contact Form -->
 				<div class="contact-form">
-					<form action="https://formspree.io/f/mvoevdyd" method="post">
+					<form action="https://formspree.io/f/mleqakkn" method="post">
 						<div class="row clearfix">
 							
 							<div class="col-lg-6 col-md-6 col-sm-12 form-group">
