--- a/index.html
+++ b/index.html
@@ -152,14 +152,14 @@
             <nav class="menu-box">
                 <div class="nav-logo"><a href="index.html"><img src="images/logo-5.svg" alt="" title=""></a></div>
 				<!-- Search -->
-				<div class="search-box">
+				<!-- <div class="search-box">
 					<form method="post" action="https://themesflat.co/html/kashit/contact.html">
 						<div class="form-group">
 							<input type="search" name="search-field" value="" placeholder="SEARCH HERE" required>
 							<button type="submit"><span class="icon flaticon-search"></span></button>
 						</div>
 					</form>
-				</div>
+				</div> -->
                 <div class="menu-outer"><!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header--></div>
             </nav>
         </div>
